--- a/dicee.html
+++ b/dicee.html
@@ -5,7 +5,6 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
   </head>
   <body>
 
@@ -24,7 +23,7 @@
 
     </div>
 
-
+ <script src="index.js" charset="utf-8"></script>
   </body>
 
   <footer>
